--- a/src/App.css
+++ b/src/App.css
@@ -28,50 +28,6 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.items {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.cart {
-  margin-right: 50px;
-  margin-top: 15px;
-  display: flex;
-  flex-direction: column;
-  
-  border: 2px solid #d2d2d2;
-  border-radius: 10px;
-  box-shadow: 0 1px 1px #d2d2d2;
-  background: white;
-}
-
-.item1 {grid-area: header;}
-.item2 {grid-area: left-side;}
-.item3 {grid-area: main;}
-.item4 {grid-area: cart;}
-.item5 {grid-area: footer;}
-
-.grid-container {
-  display: grid;
-  grid-template-areas:
-    'header header header'
-    'left-side main cart'
-    'footer footer footer';
-  gap: 10px;
-  padding: 10px;
-  font-family: Helvetica, sans-serif;
-}
-
 .button {
   background-color: white;
   color: rgb(30, 30, 30);
@@ -82,8 +38,7 @@
   border-radius: 15px;
 }
 
-.item1 {
+.lecture-table {
   display: flex;
   justify-content: center;
-  
 }
