--- a/src/notes/notes.css
+++ b/src/notes/notes.css
@@ -1,6 +1,7 @@
 .note {
   max-width: 80vw;
-  text-align: left;
+  margin-left: 10%;
+  margin-right: 10%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -13,5 +14,21 @@
 }
 
 .content {
-  max-width: 90%;
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: left;
+}
+
+.table1 {
+  border-width: .1;
+  border-style: dotted;
+  text-align: left;
+  padding: 5px;
+}
+
+.recap {
+  border-style: dashed;
+  padding-left: 10px;
 }
